--- a/menu/lunch.html
+++ b/menu/lunch.html
@@ -18,9 +18,9 @@
 
       <div class="nav-links">
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/menu.html">Menu</a></li>
-          <li><a href="/location.html">Location</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../menu.html">Menu</a></li>
+          <li><a href="../location.html">Location</a></li>
           <li><a 
             href="https://order.online/business/sushi-spott-54127"
             target="_blank"
